OO-5206: add technical type to business group
Group tap only search group with the technical type 'business'. LTI will
create and link 'lti' groups to course to isolate the members on a
deployment base.